--- a/contact.html
+++ b/contact.html
@@ -20,10 +20,10 @@
                     <form onsubmit="return submitForm()" class="box">
                         <h1>Contact Us</h1>
                         <p class="text-muted"> Drop your Message!</p>
-                        <input type="text" name="" placeholder="Username">
-                        <input type="password" name="" placeholder="Password">
-                        <input type="text" name="" placeholder="E-mail">
-                        <input type="message" name="" placeholder="Enter Your Message">
+                        <input type="text" name="" placeholder="Username" required>
+                        <input type="password" name="" placeholder="Password" required>
+                        <input type="text" name="" placeholder="E-mail" required>
+                        <input type="message" name="" placeholder="Enter Your Message" required>
                         <input type="submit" name="" value="Submit" href="#">
                         <div style="text-align: center;">
                             <h5>Click <a href="index.html" class="text-danger">here</a> if you want to Login </h5>
