--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                     <form onsubmit="return submitForm()" class="box">
                         <h1 style="margin-top: 20px;margin-bottom: 50px;">Login</h1>
                         <p class="text-muted"> Please enter your login and password!</p>
-                        <input type="text" name="" placeholder="Username">
-                        <input type="password" name="" placeholder="Password">
+                        <input type="text" name="" placeholder="Username" required>
+                        <input type="password" name="" placeholder="Password" required>
                         <a class="forgot text-muted" href="#">Forgot password?</a>
                         <input type="submit" name="" value="Login" href="#">
                     
